# vulkan_parser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_all_windows.bat  main.cpp  result_log.txt  vulkan_1_2_opt_in.txt
parser_in/: VkLayer_api_dump.json  VkLayer_crash_diagnostic.json  VkLayer_gfxreconstruct.json  VkLayer_khronos_profiles.json  VkLayer_khronos_shader_object.json  VkLayer_khronos_synchronization2.json  VkLayer_monitor.json  VkLayer_screenshot.json
parser_out/: device_extensions.txt  instance_extensions.txt  result_log.txt  vulkan_device_extensions.txt  vulkan_instance_extensions.txt  vulkan_instance_layers.txt
